[gd_scene load_steps=17 format=3 uid="uid://bk2es1e43h01v"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_uw8se"]
[ext_resource type="PackedScene" uid="uid://dsn23pn5ecvjq" path="res://scenes/StreetSceneInstance.tscn" id="2_yue7m"]
[ext_resource type="PackedScene" uid="uid://faqqu8oh31xy" path="res://scenes/player.tscn" id="3_0ueof"]
[ext_resource type="Script" path="res://scripts/Camera_Movement.gd" id="4_slnx7"]
[ext_resource type="Script" path="res://scripts/Node3D.gd" id="5_l42jh"]
[ext_resource type="PackedScene" uid="uid://d0x2dhf6w6lpq" path="res://scenes/HUD.tscn" id="6_crirl"]
[ext_resource type="Script" path="res://scenes/HUD.gd" id="7_vsadh"]
[ext_resource type="PackedScene" uid="uid://30u2dtnmw38p" path="res://Farola.tscn" id="7_x74ja"]
[ext_resource type="Script" path="res://Farola.gd" id="8_s3a4p"]
[ext_resource type="Texture2D" uid="uid://cgpk076gwe06f" path="res://NightSkyHDRI003_4K-HDR.exr" id="8_xgt8n"]
[ext_resource type="PackedScene" uid="uid://bpvdxqxin0831" path="res://Botones/PoliceCar.fbx" id="11_1johk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yuxok"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lffgm"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_xutq2"]
panorama = ExtResource("8_xgt8n")
filter = false

[sub_resource type="Sky" id="Sky_aovxj"]
sky_material = SubResource("PanoramaSkyMaterial_xutq2")

[sub_resource type="Environment" id="Environment_8vxwo"]
background_mode = 2
background_energy_multiplier = 2.18
sky = SubResource("Sky_aovxj")
sky_custom_fov = 36.0
fog_enabled = true
fog_light_color = Color(0.18382, 0.20313, 0.233487, 1)
fog_light_energy = 0.01
fog_density = 0.3838
volumetric_fog_enabled = true
volumetric_fog_density = 1.0
volumetric_fog_albedo = Color(0, 0, 0, 1)
volumetric_fog_length = 100.0

[node name="Main" type="Node"]
script = ExtResource("1_uw8se")

[node name="FloorSpriteHandler" type="Node3D" parent="."]

[node name="FloorInstance" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 78.0098, 0, 0)

[node name="FloorInstance2" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 71.5098, 0, 0)

[node name="FloorInstance3" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 64.9814, 0, 0)

[node name="FloorInstance4" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 58.4814, 0, 0)

[node name="FloorInstance5" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 52.0132, 0, 0)

[node name="FloorInstance6" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 45.5132, 0, 0)

[node name="FloorInstance7" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 39.0983, 0, 0)

[node name="FloorInstance8" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 32.5983, 0, 0)

[node name="FloorInstance9" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 26.107, 0, 0)

[node name="FloorInstance10" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 19.607, 0, 0)

[node name="FloorInstance11" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 13.1036, 0, 0)

[node name="FloorInstance12" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.6036, 0, 0)

[node name="FloorInstance13" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.135339, 0, 0)

[node name="FloorInstance14" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.36466, 0, 0)

[node name="FloorInstance15" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.8303, 0, 0)

[node name="FloorInstance16" parent="FloorSpriteHandler" instance=ExtResource("2_yue7m")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -19.3303, 0, 0)

[node name="FloorCollider" type="StaticBody3D" parent="."]
transform = Transform3D(162.738, 0, 0, 0, 0.0287292, 0, 0, 0, 1.54428, 0, 0, 0)

[node name="FloorCollider" type="CollisionShape3D" parent="FloorCollider"]
transform = Transform3D(1, 0, 0, 0.000106812, 1, 0, 0, 0, 0.999996, 0.00222452, -0.419203, 0.131907)
shape = SubResource("BoxShape3D_yuxok")

[node name="Player" parent="." instance=ExtResource("3_0ueof")]
transform = Transform3D(1.02583, 0, 0, 0, 1.02583, 0, 0, 0, 1.02583, 79.241, 0.644475, -0.063)

[node name="PlayerCamera" type="Camera3D" parent="Player"]
transform = Transform3D(-4.26108e-08, 0, 0.974823, 0, 0.974822, 0, -0.974822, 0, -4.26108e-08, 0.00495911, 0.76132, 0.000971846)
script = ExtResource("4_slnx7")

[node name="LightRotation" type="Node3D" parent="Player"]
script = ExtResource("5_l42jh")

[node name="FlashLight" type="SpotLight3D" parent="Player/LightRotation"]
transform = Transform3D(-0.00668198, -0.184852, 0.95711, -0.0012905, 0.957134, 0.184847, -0.974797, -2.26974e-10, -0.00680546, -0.363899, 0.343648, 0)
light_energy = 16.0
spot_range = 7.45678
spot_angle = 30.6485

[node name="TimerFlashlight" type="Timer" parent="Player/LightRotation"]
wait_time = 0.037
autostart = true

[node name="PlaceholderThings" type="StaticBody3D" parent="."]
transform = Transform3D(1.02939, 0, 0, 0, 1.02939, 0, 0, 0, 1.02939, 84.1556, 2.71483, -0.0712345)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="StaticBody3D2" type="StaticBody3D" parent="PlaceholderThings"]
transform = Transform3D(0.999299, 0.0325133, -0.0185898, -0.0318805, 0.998934, 0.0333762, 0.019655, -0.0327601, 0.99927, 5.15901, 0.556553, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings/StaticBody3D2"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="StaticBody3D2" type="StaticBody3D" parent="PlaceholderThings/StaticBody3D2"]
transform = Transform3D(0.999299, 0.0325133, -0.0185898, -0.0318806, 0.998935, 0.0333763, 0.019655, -0.0327601, 0.999271, -2.15973, -0.340809, -2.5908)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings/StaticBody3D2/StaticBody3D2"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="StaticBody3D2" type="StaticBody3D" parent="PlaceholderThings/StaticBody3D2/StaticBody3D2"]
transform = Transform3D(0.999299, 0.0325133, -0.0185898, -0.0318805, 0.998934, 0.0333762, 0.019655, -0.0327602, 0.99927, -0.57182, -0.12193, 4.3019)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings/StaticBody3D2/StaticBody3D2/StaticBody3D2"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="PlaceholderThings2" type="StaticBody3D" parent="."]
transform = Transform3D(1.02939, 0, 0, 0, 1.02939, 0, 0, 0, 1.02939, 84.1575, 2.86159, 19.2995)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings2"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="StaticBody3D2" type="StaticBody3D" parent="PlaceholderThings2"]
transform = Transform3D(0.999299, 0.0325133, -0.0185898, -0.0318805, 0.998934, 0.0333762, 0.019655, -0.0327601, 0.99927, 5.15901, 0.556553, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings2/StaticBody3D2"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="StaticBody3D2" type="StaticBody3D" parent="PlaceholderThings2/StaticBody3D2"]
transform = Transform3D(0.999299, 0.0325133, -0.0185898, -0.0318806, 0.998935, 0.0333763, 0.019655, -0.0327601, 0.999271, -2.15973, -0.340809, -2.5908)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings2/StaticBody3D2/StaticBody3D2"]
transform = Transform3D(1, 8.63802e-08, -2.98023e-08, -2.77068e-08, 1, 2.98023e-08, 1.49012e-08, -1.49012e-08, 1, -83.0686, -1.59264, 4.65779)
mesh = SubResource("CylinderMesh_lffgm")

[node name="StaticBody3D2" type="StaticBody3D" parent="PlaceholderThings2/StaticBody3D2/StaticBody3D2"]
transform = Transform3D(0.999299, 0.0325133, -0.0185898, -0.0318805, 0.998934, 0.0333762, 0.019655, -0.0327602, 0.99927, -0.57182, -0.12193, 4.3019)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceholderThings2/StaticBody3D2/StaticBody3D2/StaticBody3D2"]
mesh = SubResource("CylinderMesh_lffgm")

[node name="PlayerHUD" parent="." instance=ExtResource("6_crirl")]
script = ExtResource("7_vsadh")

[node name="Minutes" type="Label" parent="PlayerHUD"]
offset_left = 182.0
offset_top = 63.0
offset_right = 260.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 33
text = "00:"
metadata/_edit_use_anchors_ = true

[node name="Seconds" type="Label" parent="PlayerHUD"]
offset_left = 225.0
offset_top = 63.0
offset_right = 275.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 33
text = "00:"
metadata/_edit_use_anchors_ = true

[node name="Mseconds" type="Label" parent="PlayerHUD"]
offset_left = 268.0
offset_top = 63.0
offset_right = 308.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 33
text = "00"
metadata/_edit_use_anchors_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8vxwo")

[node name="Farola" parent="." instance=ExtResource("7_x74ja")]
transform = Transform3D(-3.18934e-08, 0, 1.0027, 0, 0.684223, 0, -0.729636, 0, -4.38293e-08, 73.3759, 0, -0.917747)
script = ExtResource("8_s3a4p")

[node name="FarolaLight" type="SpotLight3D" parent="Farola"]
transform = Transform3D(-0.000497434, 1.34821, 0.266247, -0.00292413, -0.290864, 1.47285, 0.999998, -2.22439e-05, 0.00198095, -0.25765, 3.36051, 1.00163)
light_energy = 11.182
light_indirect_energy = 1.323
light_size = 0.162

[node name="Timer" type="Timer" parent="Farola"]
autostart = true

[node name="PoliceCar" parent="." instance=ExtResource("11_1johk")]
transform = Transform3D(0.848473, 0, 0.529238, 0, 1, 0, -0.529238, 0, 0.848473, 75.8969, 0.0773042, -2.43747)

[connection signal="timeout" from="Player/LightRotation/TimerFlashlight" to="Player/LightRotation" method="_on_timer_timeout"]
[connection signal="timeout" from="Farola/Timer" to="Farola" method="_on_timer_timeout"]
